tests/ui/include_value.nightly.stderr
error[E0277]: the trait bound `NotZerocopy<u32>: FromBytes` is not satisfied
  --> $DIR/include_value.rs:18:5
   |
18 |     zerocopy::include_value!("../../testdata/include_value/data");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromBytes` is not implemented for `NotZerocopy<u32>`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `NotZerocopy<u32>`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 79 others
note: required by a bound in `NOT_FROM_BYTES::transmute`
  --> $DIR/include_value.rs:18:5
   |
18 |     zerocopy::include_value!("../../testdata/include_value/data");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     required by a bound in this function
   |     required by this bound in `transmute`
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `zerocopy::include_value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: transmuting from 4-byte type to 8-byte type: `[u8; 4]` -> `u64`
  --> $DIR/include_value.rs:23:25
   |
23 | const WRONG_SIZE: u64 = zerocopy::include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `WRONG_SIZE` failed here
   |
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `zerocopy::include_value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/include_value.rs:23:25
   |
23 | const WRONG_SIZE: u64 = zerocopy::include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 4]` (32 bits)
   = note: target type: `u64` (64 bits)
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `zerocopy::include_value` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0080, E0277, E0512.
For more information about an error, try `rustc --explain E0080`.
